--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Evolution</title>
+  <title>Evolve &ndash; <%= yield(:title) %></title> 
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body class=<%= @login_page ? "loginpage" : "" %>>
 
 <%= yield %>
+
+<%= javascript_include_tag "application" %> 
+<%= yield :javascript %> 
 
 </body>
 </html>
