Add home page. NOT DONE YET: need to resolve js/css depandency.

--- a/app/views/site/login.html.erb
+++ b/app/views/site/login.html.erb
@@ -17,7 +17,7 @@
 <div class="loginpanel">
   <div class="loginpanelinner">
     <div class="logo animate0 bounceIn"><%= image_tag('logo.png') %></div>
-    <form id="login" action="home.html" method="post">
+    <form id="login" action="<%= home_path %>" method="get">
       <div class="inputwrapper login-alert">
         <div class="alert alert-error">Invalid username or password</div>
       </div>
