--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -10,6 +10,9 @@
       <%= f.label :last_name  %>
       <%= f.text_field :last_name, id:"last_name"%>
 
+      <%= f.label :position  %>
+      <%= f.text_field :position, id:"position", type:Integer %>
+
       <%= f.label :email %>
       <%= f.text_field :email, id:"email"%>
 
