Orginaze frontend layout and partial. Integrate backend. Partial not done YET.

--- a/app/assets/stylesheets/style.default.css.erb
+++ b/app/assets/stylesheets/style.default.css.erb
@@ -2,6 +2,7 @@
 Created by: Mienard Lumaad (@themepixels)
 */
 
+/*
 @import url('bootstrap.min.css');
 @import url('bootstrap-responsive.min.css');
 @import url('jquery.ui.css');
@@ -20,7 +21,8 @@ Created by: Mienard Lumaad (@themepixels)
 @import url('fullcalendar.css');
 @import url('roboto.css');
 @import url('lato.css');
-/*@import url('font-awesome.min.css');*/
+@import url('font-awesome.min.css');
+*/
 
 
 /***** RESET BROWSER STYLE *****/
@@ -75,16 +77,16 @@ h1,h2,h3,h4,h5 { font-weight: normal; line-height: normal; }
 
 .inputwrapper input { border: 0; padding: 10px; background: #fff; width: 250px; }
 .inputwrapper input:active, .inputwrapper input:focus { background: #fff; border: 0; }
-.inputwrapper button {
+.inputwrapper input.btn{
 		  display: block; border: 1px solid #0c57a3; padding: 10px; background: #0972dd; width: 100%;
 		  color: #fff; text-transform: uppercase; }
-.inputwrapper button:focus, .inputwrapper button:active, .inputwrapper button:hover { background: #1e82e8; }
+.inputwrapper input.btn:focus, .inputwrapper input.btn:active, .inputwrapper input.btn:hover { background: #1e82e8; }
 .inputwrapper label {
 		  display: inline-block; margin-top: 10px; color: rgba(255,255,255,0.8); font-size: 11px; vertical-align: middle; }
 .inputwrapper label input { width: auto; margin: -3px 5px 0 0; vertical-align: middle; }
 .inputwrapper .remember { padding: 0; background: none; }
 
-.login-alert { display: none; }
+/*.login-alert { display: none; }*/
 .login-alert .alert { font-size: 11px; text-align: center; padding: 5px 0; border: 0; }
 
 .loginfooter {
