--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,6 +8,13 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
+ *= require bootstrap.min
+ *= require bootstrap-responsive.min
+ *= require jquery.ui
+ *= require font-awesome.min
+ *= require animate.min
+ *= require animate.delay
+ *= require style.default
  *= require_self
  *= require_tree .
  */
