--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -4,23 +4,12 @@
   <title>Evolve &ndash; <%= yield(:title) %></title> 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <%= stylesheet_link_tag "application", :media => "all" %>
+  <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body class="loginpage">
 
-<div class="mainwrapper">
-  <%= render 'shared/header', :locals => {:user => current_user} %>
-  
-  <div class="leftpanel">
-    <%= render 'shared/leftmenu' %>
-  </div>
-
-  <div class="rightpanel">
-    <%= yield %>
-  </div>
-
-</div>
+<%= yield %>
 
 <%= javascript_include_tag "application" %> 
 <%= yield :javascript %> 
