Add search.png. Add flash message support. Implement user new view.

--- a/app/assets/stylesheets/style.default.css.erb
+++ b/app/assets/stylesheets/style.default.css.erb
@@ -211,7 +211,7 @@ h1,h2,h3,h4,h5 { font-weight: normal; line-height: normal; }
 
 .searchbar { position: absolute; top: 33%; right: 20px; }
 .searchbar input {
-	width: 220px; padding: 8px 10px; background: #fff url(../images/icons/search.png) no-repeat 215px 10px;
+	width: 220px; padding: 8px 10px; background: #fff url(<%= asset_data_uri 'search.png' %>) no-repeat 215px 10px;
 	font-size: 12px;
 }
 
@@ -1429,7 +1429,7 @@ blockquote {
 blockquote p { margin: 0 !important; }
 blockquote.pull-right { background-position: right 5px; padding: 0 40px 0 0; border-right: 0; }
 
-.alert { border-color: #e4bf7f; color: #9c6c38; margin-bottom: 15px; background: rgb(246,237,186); }
+.alert { border-color: #e4bf7f; color: #9c6c38; margin-bottom: 0px; background: rgb(246,237,186); }
 .alert .close { top: 0; right: -23px; color: #937f0e; }
 .alert h4 { color: #9c6c38; }
 
