--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -24,11 +24,11 @@
         <div class="userloggedinfo">
           <img src="images/photos/thumb1.png" alt="" />
           <div class="userinfo">
-            <h5><%= @user.fullname %> <small>- <%= @user.email %></small></h5>
+            <h5><%= current_user.fullname %> <small>- <%= current_user.email %></small></h5>
             <ul>
               <li><a href="editprofile.html">Edit Profile</a></li>
               <li><a href="">Account Settings</a></li>
-              <li><%= link_to "Sign out", session_path, :method => :delete %></li>
+              <li><%= link_to "Sign out", logout_path %></li>
             </ul>
           </div>
         </div>
