--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,29 +1,85 @@
-<% provide(:title, 'Sign up') %>
-<h1>Sign up</h1>
-<div class="row">
-  <div class="span6 offset3">
-    <%= form_for(@user) do |f| %>
+<% provide(:title, 'create user') %>
+<% content_for :javascript do %>
+<script type="text/javascript">
+</script>
+<% end %>
 
-      <%= f.label :first_name  %>
-      <%= f.text_field :first_name  %>
+<ul class="breadcrumbs">
+    <li><%= link_to content_tag(:i, '', :class => 'iconfa-home' ), user_path(current_user)  %><span class="separator"></span></li>
+</ul>
 
-      <%= f.label :last_name  %>
-      <%= f.text_field :last_name, id:"last_name"%>
+<div class="pageheader">
+    <form action="#" method="post" class="searchbar">
+        <input type="text" name="keyword" placeholder="To search course and hit enter..." />
+    </form>
+    <div class="pageicon"><span class="iconfa-home"></span></div>
+    <div class="pagetitle">
+        <h5>Key Account Manager(Lv2)</h5>
+        <h1>Crete User</h1>
+    </div>
+</div><!--pageheader-->
 
-      <%= f.label :position  %>
-      <%= f.text_field :position, id:"position", type:Integer %>
-
-      <%= f.label :email %>
-      <%= f.text_field :email, id:"email"%>
-
-      <%= f.label :password  %>
-      <%= f.text_field :password, id:"password" %>
-
-      <%= f.label :password_confirmation, "Confirmation" %>
-      <%= f.text_field :password_confirmation, id:"password_confirmation" %>
-
-      <%= f.submit "Create user account",class: "btn btn-large btn-primary"  %>
-
-    <% end %>
+<div class="maincontent">
+  <div class="maincontentinner">
+    <div class="row-fluid">
+      <div id="dashboard-left" class="span8">
+        <h3 class="subtitle">Competency Model</h3>
+        <div class="divider15"></div>
+        <h4 class="widgettitle">Create New User</h4>
+        <div class="widgetcontent">
+          <%= form_for @user, :html => {:class => "form-horizontal"} do |f| %>
+            <div class="control-group">
+              <%= f.label :first_name, :class => "control-label" %>
+              <div class="controls">
+                <%= f.text_field :first_name, :class => "input-xlarge"  %>
+              </div>
+            </div>
+            <div class="control-group">
+              <%= f.label :last_name, :class => "control-label" %>
+              <div class="controls">
+                <%= f.text_field :last_name, :class => "input-xlarge"  %>
+              </div>
+            </div>
+            <div class="control-group">
+              <%= f.label :position, :class => "control-label" %>
+              <div class="controls">
+                <%= f.text_field :position, :class => "input-xlarge"  %>
+              </div>
+            </div>
+            <div class="control-group">
+              <%= f.label :email, :class => "control-label" %>
+              <div class="controls">
+                <%= f.text_field :email, :class => "input-xlarge"  %>
+              </div>
+            </div>
+            <div class="control-group">
+              <%= f.label :password, :class => "control-label" %>
+              <div class="controls">
+                <%= f.password_field :password, :class => "input-xlarge"  %>
+              </div>
+            </div>
+            <div class="control-group">
+              <%= f.label :password_confirmation, :class => "control-label" %>
+              <div class="controls">
+                <%= f.password_field :password_confirmation, :class => "input-xlarge"  %>
+              </div>
+            </div>
+      
+            <div class="form-actions">
+            <%= f.submit :class => "btn btn-primary" %>
+            </div>
+      
+          <% end %>
+        </div>
+      </div>
+      <div id="dashboard-right" class="span4">
+        <h3 class="subtitle">sidebar here</h3>
+        <div class="divider15"></div>
+        <h4 class="widgettitle"> Side Content</h4>
+        <div class="widgetcontent">
+          Side content
+        </div>
+      </div>
+    </div>
   </div>
 </div>
