Add locals for views. Adjust en version for navigator.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -36,6 +36,12 @@
           Side content
         </div>
       </div>
-    </div>
+    </div> <!--row-fluid-->
+
+    <div class="footer">
+      <div class="footer-left">
+        <span>&copy; 2013. Evolve Solution. All Rights Reserved.</span>
+      </div>
+    </div><!--footer-->
   </div>
 </div>
