--- a/app/views/shared/_leftmenu.html.erb
+++ b/app/views/shared/_leftmenu.html.erb
@@ -1,44 +1,44 @@
 <div class="leftmenu">        
   <ul class="nav nav-tabs nav-stacked">
-    <li class="nav-header">Navigator</li>
-      <li class="dropdown active"><a href=""><span class="iconfa-plus"></span> User Actions</a>
+    <li class="nav-header"><%= t('menu.navigator') %></li>
+      <li class="dropdown active"><a href=""><span class="iconfa-plus"></span> <%= t('menu.user.action') %></a>
       <ul style="display: block">
-        <li class="active"><a href="home.html"><span class="iconfa-home"></span> Home</a></li>
-        <li><a href="#"><span class="iconfa-book"></span> My Courses</a></li>
-        <li><a href="#"><span class="iconfa-edit"></span> My Exams</a></li>
-        <li><a href="#"><span class="iconfa-tasks"></span> My Assessmemts</a></li>
-        <li><a href="#"><span class="iconfa-calendar"></span> Training Calender</a></li>
-        <li><a href="#"><span class="iconfa-cloud"></span> Competency Library</a></li>
-        <li><a href="#"><span class="iconfa-briefcase"></span> Course Library</a></li>
-        <li><a href="#"><span class="iconfa-group"></span> Teachers</a></li>
+        <li class="active"><a href="home.html"><span class="iconfa-home"></span> <%= t('menu.user.home') %></a></li>
+        <li><a href="#"><span class="iconfa-book"></span> <%= t('menu.user.mycourse') %></a></li>
+        <li><a href="#"><span class="iconfa-edit"></span> <%= t('menu.user.myexams') %></a></li>
+        <li><a href="#"><span class="iconfa-tasks"></span> <%= t('menu.user.myassessments') %></a></li>
+        <li><a href="#"><span class="iconfa-calendar"></span> <%= t('menu.user.calendar') %></a></li>
+        <li><a href="#"><span class="iconfa-cloud"></span> <%= t('menu.user.competency') %></a></li>
+        <li><a href="#"><span class="iconfa-briefcase"></span> <%= t('menu.user.courses') %></a></li>
+        <li><a href="#"><span class="iconfa-group"></span> <%= t('menu.user.teacheres') %></a></li>
       </ul>
       
-      <li class="dropdown"><a href=""><span class="iconfa-plus"></span> Tearcher Actions</a>
+      <li class="dropdown"><a href=""><span class="iconfa-plus"></span> <%= t('menu.teacher.action') %></a>
       <ul>
-        <li><a href="#"><span class="iconfa-certificate"></span> Certifications</a></li>
-        <li><a href="#"><span class="iconfa-briefcase"></span> My Classes</a></li>
-        <li><a href="#"><span class="iconfa-th-large"></span> My Course Development</a></li>
-        <li><a href="#"><span class="iconfa-list"></span> My Records</a></li>
-        <li><a href="#"><span class="iconfa-glass"></span> Teacher Clubs</a></li>
+        <li><a href="#"><span class="iconfa-certificate"></span> <%= t('menu.teacher.cert') %></a></li>
+        <li><a href="#"><span class="iconfa-briefcase"></span> <%= t('menu.teacher.class') %></a></li>
+        <li><a href="#"><span class="iconfa-th-large"></span> <%= t('menu.teacher.development') %></a></li>
+        <li><a href="#"><span class="iconfa-list"></span> <%= t('menu.teacher.records') %></a></li>
+        <li><a href="#"><span class="iconfa-glass"></span> <%= t('menu.teacher.club') %></a></li>
       </ul>
     
-      <li class="dropdown"><a href=""><span class="iconfa-plus"></span> Manager Actions</a>
+      <li class="dropdown"><a href=""><span class="iconfa-plus"></span> <%= t('menu.manager.action') %></a>
       <ul>
-        <li><a href="#"><span class="iconfa-group"></span> Tean Members</a></li>
-        <li><a href="#"><span class="iconfa-globe"></span> Team Competency</a></li>
-        <li><a href="#"><span class="iconfa-folder-close"></span> Team Learning Records</a></li>
-        <li><a href="#"><span class="iconfa-list-ul"></span> Assessments</a></li>
+        <li><a href="#"><span class="iconfa-group"></span> <%= t('menu.manager.members') %></a></li>
+        <li><a href="#"><span class="iconfa-globe"></span> <%= t('menu.manager.competency') %></a></li>
+        <li><a href="#"><span class="iconfa-folder-close"></span> <%= t('menu.manager.records') %></a></li>
+        <li><a href="#"><span class="iconfa-list-ul"></span> <%= t('menu.manager.assessments') %></a></li>
       </ul>
       
-      <li class="dropdown"><a href=""><span class="iconfa-plus"></span> Administrator Actions</a>
+      <li class="dropdown"><a href=""><span class="iconfa-plus"></span> <%= t('menu.admin.action') %></a>
       <ul>
-        <li><a href="#"><span class="iconfa-sitemap"></span> Competency Managememt</a></li>
-        <li><a href="#"><span class="iconfa-folder-open"></span> Course Managememt</a></li>
-        <li><a href="#"><span class="iconfa-user"></span> Teacher Managememt</a></li>
-        <li><a href="#"><span class="iconfa-cogs"></span> Provider Management</a></li>
-        <li><a href="#"><span class="iconfa-star"></span> Learning Plan</a></li>
-        <li><a href="#"><span class="iconfa-flag"></span> Assessments Management</a></li>
-        <li><a href="datamine.html"><span class="iconfa-cloud"></span> Data Analysis</a></li>
+        <li><a href="#"><span class="iconfa-sitemap"></span> <%= t('menu.admin.competency') %></a></li>
+        <li><a href="#"><span class="iconfa-folder-open"></span> <%= t('menu.admin.course') %></a></li>
+        <li><a href="#"><span class="iconfa-user"></span> <%= t('menu.admin.teacher') %></a></li>
+        <li><a href="#"><span class="iconfa-cogs"></span> <%= t('menu.admin.provider') %></a></li>
+        <li><a href="#"><span class="iconfa-star"></span> <%= t('menu.admin.plan') %></a></li>
+        <li><a href="#"><span class="iconfa-flag"></span> <%= t('menu.admin.assessment') %></a></li>
+        <li><a href="datamine.html"><span class="iconfa-cloud"></span> <%= t('menu.admin.data') %></a></li>
       </ul>
   </ul>
 </div><!--leftmenu-->
