--- a/app/views/shared/_leftmenu.html.erb
+++ b/app/views/shared/_leftmenu.html.erb
@@ -30,6 +30,7 @@
         <li><a href="#"><span class="iconfa-list-ul"></span> <%= t('menu.manager.assessments') %></a></li>
       </ul>
       
+      <% if current_user.admin? %>
       <li class="dropdown"><a href=""><span class="iconfa-plus"></span> <%= t('menu.admin.action') %></a>
       <ul>
         <li><a href="#"><span class="iconfa-sitemap"></span> <%= t('menu.admin.competency') %></a></li>
@@ -40,5 +41,6 @@
         <li><a href="#"><span class="iconfa-flag"></span> <%= t('menu.admin.assessment') %></a></li>
         <li><a href="datamine.html"><span class="iconfa-cloud"></span> <%= t('menu.admin.data') %></a></li>
       </ul>
+      <% end %>
   </ul>
 </div><!--leftmenu-->
