--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -28,12 +28,32 @@
         <h4 class="widgettitle">Create New User</h4>
         <div class="widgetcontent">
           <div class="divider15"></div>
-          <%= simple_form_for(@user, :html => {:class => 'form-horizontal' }) do |f| %>
+          <%= simple_form_for(@user, :html => {:class => 'form-horizontal', :multipart => true }) do |f| %>
             <%= f.input :name %>
             <%= f.input :email %>
             <%= f.input :position_id %>
             <%= f.input :password, hint: 'No special characters.'%>
             <%= f.input :password_confirmation %>
+
+            <div class="control-group file optional">
+              <label class="file optional control-label" for="user_avatar">Avatar</label>
+              <div class="controls">
+                <div class="fileupload fileupload-new" data-provides="fileupload">
+                <div class="input-append">
+                  <div class="uneditable-input span2">
+                  <i class="iconfa-file fileupload-exists"></i>
+                  <span class="fileupload-preview"></span>
+                  </div>
+                  <span class="btn btn-file"><span class="fileupload-new">Select file</span>
+                  <span class="fileupload-exists">Change</span>
+                  <input class="file optional" id="user_avatar" name="user[avatar]" type="file" /></span>
+                  <a href="#" class="btn fileupload-exists" data-dismiss="fileupload">Remove</a>
+                </div>
+                <p class="help-block">No special characters.</p>
+                </div>
+              </div>
+            </div>
+      
             <div class="form-actions">
             <%= f.button :submit, :class => "btn-primary"  %>
             </div>
@@ -46,7 +66,7 @@
         <div class="divider15"></div>
         <h4 class="widgettitle"> Side Content</h4>
         <div class="widgetcontent">
-          Side content
+          content
         </div>
       </div>
     </div>
