--- a/app/views/shared/_leftmenu.html.erb
+++ b/app/views/shared/_leftmenu.html.erb
@@ -1,9 +1,10 @@
 <div class="leftmenu">        
   <ul class="nav nav-tabs nav-stacked">
     <li class="nav-header"><%= t('menu.navigator') %></li>
+      <% unless current_user.admin? %>
       <li class="dropdown active"><a href=""><span class="iconfa-plus"></span> <%= t('menu.user.action') %></a>
       <ul style="display: block">
-        <li class="active"><a href="home.html"><span class="iconfa-home"></span> <%= t('menu.user.home') %></a></li>
+        <li class="active"><a href="<%= dashboard_user_path(current_user) %>"><span class="iconfa-home"></span> <%= t('menu.user.home') %></a></li>
         <li><a href="#"><span class="iconfa-book"></span> <%= t('menu.user.mycourse') %></a></li>
         <li><a href="#"><span class="iconfa-edit"></span> <%= t('menu.user.myexams') %></a></li>
         <li><a href="#"><span class="iconfa-tasks"></span> <%= t('menu.user.myassessments') %></a></li>
@@ -29,6 +30,7 @@
         <li><a href="#"><span class="iconfa-folder-close"></span> <%= t('menu.manager.records') %></a></li>
         <li><a href="#"><span class="iconfa-list-ul"></span> <%= t('menu.manager.assessments') %></a></li>
       </ul>
+      <% end %>
       
       <% if current_user.admin? %>
       <li class="dropdown"><a href=""><span class="iconfa-plus"></span> <%= t('menu.admin.action') %></a>
