--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,74 +1,57 @@
 <% provide(:title, 'create user') %>
+<% provide(:page_title, "Create User") %>
+<% provide(:page_sub_title, "Dashboard") %>
+<% provide(:page_icon, "iconfa-home") %>
+
 <% content_for :javascript do %>
 <script type="text/javascript">
 </script>
 <% end %>
 
-<ul class="breadcrumbs">
-    <li><%= link_to content_tag(:i, '', :class => 'iconfa-home' ), user_path(current_user)  %><span class="separator"></span></li>
-</ul>
-
-<div class="pageheader">
-    <form action="#" method="post" class="searchbar">
-        <input type="text" name="keyword" placeholder="To search course and hit enter..." />
-    </form>
-    <div class="pageicon"><span class="iconfa-home"></span></div>
-    <div class="pagetitle">
-        <h5>Key Account Manager(Lv2)</h5>
-        <h1>Create User</h1>
-    </div>
-</div><!--pageheader-->
-
-<div class="maincontent">
-  <div class="maincontentinner">
-    <div class="row-fluid">
-      <div id="dashboard-left" class="span8">
-        <h3 class="subtitle">Competency Model</h3>
-        <div class="divider15"></div>
-        <h4 class="widgettitle">Create New User</h4>
-        <div class="widgetcontent">
-          <div class="divider15"></div>
-          <%= simple_form_for(@user, :html => {:class => 'form-horizontal', :multipart => true }) do |f| %>
-            <%= f.input :name %>
-            <%= f.input :email %>
-            <%= f.input :position_id %>
-            <%= f.input :password, hint: 'No special characters.'%>
-            <%= f.input :password_confirmation %>
-
-            <div class="control-group file optional">
-              <label class="file optional control-label" for="user_avatar">Avatar</label>
-              <div class="controls">
-                <div class="fileupload fileupload-new" data-provides="fileupload">
-                <div class="input-append">
-                  <div class="uneditable-input span2">
-                  <i class="iconfa-file fileupload-exists"></i>
-                  <span class="fileupload-preview"></span>
-                  </div>
-                  <span class="btn btn-file"><span class="fileupload-new">Select file</span>
-                  <span class="fileupload-exists">Change</span>
-                  <input class="file optional" id="user_avatar" name="user[avatar]" type="file" /></span>
-                  <a href="#" class="btn fileupload-exists" data-dismiss="fileupload">Remove</a>
-                </div>
-                <p class="help-block">No special characters.</p>
-                </div>
+<div class="row-fluid">
+  <div id="dashboard-left" class="span8">
+    <h3 class="subtitle">Competency Model</h3>
+    <div class="divider15"></div>
+    <h4 class="widgettitle">Create New User</h4>
+    <div class="widgetcontent">
+      <div class="divider15"></div>
+      <%= simple_form_for(@user, :html => {:class => 'form-horizontal', :multipart => true }) do |f| %>
+        <%= f.input :name %>
+        <%= f.input :email %>
+        <%= f.input :position_id %>
+        <%= f.input :password, hint: 'No special characters.'%>
+        <%= f.input :password_confirmation %>
+        <div class="control-group file optional">
+          <label class="file optional control-label" for="user_avatar">Avatar</label>
+          <div class="controls">
+            <div class="fileupload fileupload-new" data-provides="fileupload">
+            <div class="input-append">
+              <div class="uneditable-input span2">
+              <i class="iconfa-file fileupload-exists"></i>
+              <span class="fileupload-preview"></span>
               </div>
+              <span class="btn btn-file"><span class="fileupload-new">Select file</span>
+              <span class="fileupload-exists">Change</span>
+              <input class="file optional" id="user_avatar" name="user[avatar]" type="file" /></span>
+              <a href="#" class="btn fileupload-exists" data-dismiss="fileupload">Remove</a>
             </div>
-      
-            <div class="form-actions">
-            <%= f.button :submit, :class => "btn-primary"  %>
+            <p class="help-block">No special characters.</p>
             </div>
-          <% end %>
-
+          </div>
         </div>
-      </div>
-      <div id="dashboard-right" class="span4">
-        <h3 class="subtitle">sidebar here</h3>
-        <div class="divider15"></div>
-        <h4 class="widgettitle"> Side Content</h4>
-        <div class="widgetcontent">
-          content
+  
+        <div class="form-actions">
+        <%= f.button :submit, :class => "btn-primary"  %>
         </div>
-      </div>
+      <% end %>
+    </div>
+  </div>
+  <div id="dashboard-right" class="span4">
+    <h3 class="subtitle">sidebar here</h3>
+    <div class="divider15"></div>
+    <h4 class="widgettitle"> Side Content</h4>
+    <div class="widgetcontent">
+      content
     </div>
   </div>
 </div>
