add course, competency controller and finish dynamic navigator menu.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <%= render :partial =>'shared/header' %>
   
   <div class="leftpanel">
-    <%= render :partial => 'shared/leftmenu' %>
+    <%= render :partial => 'shared/leftmenu', :locals => {:category => @menu_category, :active => @menu_active } %>
   </div>
 
   <div class="rightpanel">
