Adjust footer position.

--- a/app/assets/stylesheets/style.default.css.erb
+++ b/app/assets/stylesheets/style.default.css.erb
@@ -216,7 +216,7 @@ h1,h2,h3,h4,h5 { font-weight: normal; line-height: normal; }
 }
 
 .maincontent { float: left; width: 100%; }
-.maincontentinner { padding: 20px; }
+.maincontentinner { padding: 20px; min-height: 300px; }
 .subtitle { text-transform: uppercase; font-size: 11px; color: #999; margin-bottom: 5px; }
 .subtitle2 { font-size: 13px; text-transform: uppercase; color: #333; margin-bottom: 5px; }
 
@@ -1133,7 +1133,7 @@ ul.list-inline li { display: inline-block; margin: 0 5px 10px 0; }
 /*** FOOTER STYLES ***/
 
 .footer {
-		  font-size: 11px; color: #666; padding-top: 15px; margin-top: 40px;
+		  font-size: 11px; color: #666; padding: 15px 0 20px 20px; margin-top: 40px;
 		  border-top: 1px solid #ddd; overflow: hidden; clear: both; }
 .footer .footer-left { float: left; }
 .footer .footer-right { float: right; }
